# AdventOfCode

./: .gitignore  Cargo.toml  README.md
2015/: Cargo.toml
2015/day01/: Cargo.toml
2015/day03/: Cargo.toml
2015/day04/: Cargo.toml
2015/day05/: Cargo.toml
2021/: Cargo.toml
2021/day01/: Cargo.toml
2022/: Cargo.toml  README.md
2023/: Cargo.toml  README.md  flake.nix  out.debug  toolchain.toml
2024/: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
2024/day01/src/: main.rs
2024/day02/: Cargo.toml
2024/day02/src/: main.rs
2024/day03/: Cargo.toml
2024/day03/src/: main.rs
2024/day04/: Cargo.toml
2024/day04/src/: main.rs
2024/day05/src/: main.rs
2024/day06/: Cargo.toml
2024/day06/src/: main.rs
2024/day07/: Cargo.toml
2024/day07/src/: main.rs
2024/day08/: Cargo.toml
2024/day08/src/: main.rs
2024/day09/: Cargo.toml
2024/day09/src/: main.rs
2024/day11/src/: main.rs
2024/day14/: Cargo.toml
2024/day14/src/: main.rs
2024/day17/: Cargo.toml
2024/day17/src/: main.rs
2024/day19/src/: main.rs
2024/day21/: Cargo.toml
2024/day21/src/: main.rs
2024/day22/src/: main.rs
2024/day23/: Cargo.toml
2024/day23/src/: main.rs
2025/: Cargo.toml  README.md  flake.nix
2025/day01/src/: main.rs
2025/day02/src/: main.rs
2025/day03/src/: main.rs
2025/day04/src/: main.rs
2025/day05/: Cargo.toml
2025/day05/src/: main.rs
common/: Cargo.toml  README.md  flake.nix  toolchain.toml
common/src/: grid.rs  lib.rs
day01/: Cargo.toml
day06/: Cargo.toml
day07/: Cargo.toml
day1/: Cargo.toml
template/: Cargo.toml
(+118 files in other folders)
