[workspace]
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day??",
]
resolver = "2"

[workspace.metadata.crane]
name = "aoc2025"

[workspace.package]
version = "2025.0.0"
edition = "2024"

[workspace.dependencies]
rayon = "1.8.0"

[workspace.dependencies.common]
path = "../common"

[profile.dev.package."*"]
opt-level = 2
