[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
num = "0.4"
petgraph = "0.6"
winnow = "0.5"
anyhow = "1"
thiserror = "1"
rayon = "1"
